--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ nav ul span{
 } 
 .b{
     display: flex;
+    align-items: center;
     list-style-type: none;
+    height: 100%;
 }
 li{
     margin-top: 5px;
@@ -52,7 +54,8 @@ li{
     font-weight: bold;
 }
 .c{
-    font-size: 20px;
+    font-size: 40px;
+    font-weight: bold;
     margin-top: 2.5px;
     margin-right: 30px;
 }
